--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title >Website</title>
-  <link rel="icon" href="img/png.png">
+  <link rel="icon" href="png.png">
 
   <link rel="stylesheet" href="style.css">
 
@@ -66,35 +66,35 @@
 
       <div class="row">
         <div class="row-img">
-          <img src="img/c1.webp">
+          <img src="c1.webp">
         </div>
         <h4>Dressing</h4>
       </div>
 
       <div class="row">
         <div class="row-img">
-          <img src="img/c2.jpg">
+          <img src="c2.jpg">
         </div>
         <h4>Landscape</h4>
       </div>
 
       <div class="row">
         <div class="row-img">
-          <img src="img/c3.jpg">
+          <img src="c3.jpg">
         </div>
         <h4>Culture</h4>
       </div>
 
       <div class="row">
         <div class="row-img">
-          <img src="img/c4.jpg">
+          <img src="c4.jpg">
         </div>
         <h4>Landmarks</h4>
       </div>
 
       <div class="row">
         <div class="row-img">
-          <img src="img/c5.jpg">
+          <img src="c5.jpg">
         </div>
         <h4>Traditional Music</h4>
       </div>
@@ -106,7 +106,7 @@
   <!---other stuff seaction -->
   <section class="travels">
     <div class="travels-img">
-      <img src="img/b1.jpg" alt="">
+      <img src="b1.jpg" alt="">
     </div>
 
     <div class="travels-text">
@@ -127,17 +127,17 @@
 
     <div class="tour-content">
       <div class="box">
-        <img src="img/t1.jpeg">
+        <img src="t1.jpeg">
         <h4>Northern area of Pakistan</h4>
       </div>
 
       <div class="box">
-        <img src="img/t2.jpeg" alt="">
+        <img src="t2.jpeg" alt="">
         <h4>Badshahi Mosque</h4>
       </div>
 
       <div class="box">
-        <img src="img/t3.jpg" alt="">
+        <img src="t3.jpg" alt="">
         <h4>Faisal Masjid</h4>
       </div>
 
@@ -162,7 +162,7 @@
     </div>
 
     <div class="cultures-img">
-      <img src="img/c1.jpg" alt="">
+      <img src="c1.jpg" alt="">
 
     </div>
 
